kotlin/semlang-parser/src/test/semlang/validatorTests/fail/threadedTypes6.sem
// We currently disallow structs with threaded objects in them (will add later)
struct TextOutHolder {
  value: ~TextOut
}
